--- a/EggrollGameLib/EggrollGameLib.csproj
+++ b/EggrollGameLib/EggrollGameLib.csproj
@@ -68,9 +68,12 @@
     <Compile Include="ClassFiles\Menus\HighScores.cs" />
     <Compile Include="ClassFiles\Menus\LoadingScreen.cs" />
     <Compile Include="ClassFiles\Menus\MainMenu.cs" />
+    <Compile Include="ClassFiles\Menus\PauseMenu.cs" />
     <Compile Include="ClassFiles\Menus\ScreenManager.cs" />
+    <Compile Include="ClassFiles\Menus\SettingsMenu.cs" />
     <Compile Include="ClassFiles\OnScreenMessages.cs" />
     <Compile Include="ClassFiles\Player.cs" />
+    <Compile Include="ClassFiles\Server\ServerHandler.cs" />
     <Compile Include="ClassFiles\Sprite.cs" />
     <Compile Include="ClassFiles\Stuff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
